@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.qualogy.qafe</groupId>
         <artifactId>platform</artifactId>
-        <version>3.1.0-SNAPSHOT</version>
+        <version>3.2.0-SNAPSHOT</version>
     </parent>
     <groupId>com.qualogy.qafe.platform</groupId>
     <artifactId>qafe-mobile-gwt</artifactId>
@@ -64,7 +64,7 @@
                     <execution>
                         <configuration>
                             <inplace>true</inplace>
-                           <!--  <extraJvmArgs>-Xms512m -Xmx1024m -XX:PermSize=512M -XX:MaxPermSize=512M -XX:-UseGCOverheadLimit -Dgwt.jjs.permutationWorkerFactory=com.google.gwt.dev.ThreadedPermutationWorkerFactory</extraJvmArgs> -->
+                            <extraJvmArgs>-XX:-UseGCOverheadLimit -Dgwt.jjs.permutationWorkerFactory=com.google.gwt.dev.ThreadedPermutationWorkerFactory</extraJvmArgs>
                             <style>${qafe-compiler-debug}</style>
                             <skip>${gwt.compile.skip}</skip>
                             <force>true</force>
